--- a/package.json
+++ b/package.json
@@ -8,5 +8,8 @@
     "@babel/preset-env": "^7.4.3",
     "babel-jest": "^24.7.1",
     "jest": "^24.7.1"
+  },
+  "scripts": {
+      "test": "jest"
   }
 }
