--- a/package.json
+++ b/package.json
@@ -2,14 +2,38 @@
   "name": "whistler-qa-interview",
   "version": "1.0.0",
   "main": "index.js",
+  "type": "module",
   "license": "MIT",
   "dependencies": {
-    "@babel/core": "^7.4.3",
-    "@babel/preset-env": "^7.4.3",
-    "babel-jest": "^24.7.1",
-    "jest": "^24.7.1"
+    "protractor": "^5.4.2",
+    "selenium-webdriver": "^4.0.0-alpha.5"
   },
   "scripts": {
-      "test": "jest"
+    "test": "jest"
+  },
+  "devDependencies": {
+    "@babel/cli": "^7.6.2",
+    "@babel/core": "^7.6.2",
+    "@babel/plugin-proposal-class-properties": "^7.5.5",
+    "@babel/plugin-transform-runtime": "^7.6.2",
+    "@babel/preset-env": "^7.6.2",
+    "@babel/preset-react": "^7.0.0",
+    "@babel/register": "^7.6.2",
+    "babel-jest": "^24.9.0",
+    "babel-plugin-import": "^1.12.2",
+    "babel-polyfill": "^6.26.0",
+    "jest": "^24.9.0",
+    "jest-environment-selenium": "^2.1.2",
+    "react": "^16.10.1",
+    "react-dom": "^16.10.1",
+    "react-test-renderer": "^16.10.1"
+  },
+  "browserslist": {
+    "prod": [
+      "last 2 Chrome version"
+    ],
+    "dev": [
+      "last 2 Chrome version"
+    ]
   }
 }
